@@ -1,4 +1,8 @@
-2012-12-01  Pedro Vicente  <pvicente@uci.edu>
+2012-12-05  Pedro Vicente  <pvicente@uci.edu>
+    
+    * bm: ncks #51 Extract associated coordinates test 2 (netCDF4 file)
+    
+2012-12-04  Pedro Vicente  <pvicente@uci.edu>
     
     * bm: ncks #50 Extract associated coordinates test 1 (netCDF3 file)
     
@@ -10,7 +14,7 @@
 
 	* bm: ncks #39 2D variable definition (netCDF4 file)
     
-    * bm: ncks #40-59 Variable/Group extraction test 1-8
+    * bm: ncks #40-49 Variable/Group extraction test 1-8
     
     * deprecate grp_id member of nm_id_sct; use full group name to get ID as needed
       
